<resources>
    <string name="app_name">SAMPLES</string>
    <string name="first_service">first service</string>
    <string name="life_cycle">life cycle</string>
    <string name="fragment_life_cycle">fragment life cycle</string>
    <string name="main_page">main page</string>
    <string name="logger_framework">logger framework</string>
    <string name="async_task">AsyncTask</string>
    <string name="common_hint">请输入内容</string>
    <string name="test_words">This is test words.</string>
    <string name="comfirm">确认</string>
    <string name="cancel">取消</string>
    <string name="intent_service_description">这是service_demo应用开启的一个IntentService服务。</string>
    <string name="normal_service_description">这是service_demo应用开启的一个Service服务</string>
    <string name="binding_service_description">这是service_demo应用开启的一个BindingService服务</string>
    <string name="front_ground_service_description">这是service_demo应用开启的一个前台Service服务</string>

    <string name="main_page_text">主页</string>
    <string name="friends_page_text">好友</string>
    <string name="explore_page_text">探索</string>
    <string name="mine_page_text">我的</string>
    <string name="center_button">中间按钮</string>
    <string name="action_settings">Settings</string>
    <string name="action_more">more</string>

    <string name="open_navigation">Open Navigation Drawer</string>
    <string name="close_navigation">Close Navigation Drawer</string>
    <string name="title_activity_system_navigation">SystemNavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="checkbox_in_recyclerview_one">解决checkbox在recyclerview中使用时出现勾选混乱的第一种解决方法:\n使用onClickListener代替onCheckedChangeListener</string>
    <string name="checkbox_in_recyclerview_two">解决checkbox在recyclerview中使用时出现勾选混乱的第一种解决方法:\n在setOnCheckedChangeListener之前先将之前的listener置空为null</string>
    <string name="checkbox_in_recyclerview_single_check">使用onClickListener代替onCheckedChangeListener的方法，实现列表单选</string>
    <string name="get">获取</string>
    <string name="get_query_data">获取Query Data</string>

    <string name="header_text">The Header</string>
    <string name="footer_text">The Footer</string>
</resources>
